# fast-api

./: main.py  pyproject.toml  test.db  test.db.backup
app/: app.py  db.py  schemas.py  users.py
